# royalc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  royalc-h.h  royalc-lib-h.h
tests/: CMakeLists.txt
